# WebCall

./: .gitignore  ARCHITECTURE.md  CALL_FIXES_README.md  README.md  conftest.py  dump.bat  dump.ps1  dump.txt  package-lock.json  pytest.ini
webcall/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Makefile  README.build.md  README.md  __init__.py  alembic.ini  docker-compose.yml  dump.bat  package-lock.json  package.json  project_dump.txt  pyproject.toml  test_app.db  vitest.config.mjs
webcall/aiosqlite/: __init__.py
webcall/alembic/: env.py  script.py.mako
webcall/alembic/versions/: 0001_init.py  0002_friends_push.py  0003_direct_messages.py  0003_direct_reads.py  0004_direct_reads.py  0005_add_user_public_key.py  0006_telegram_links.py  0007_user_ai_system_prompt.py
webcall/app/alembic/versions/: 0003_direct_messages.py
webcall/app/application/dto/: auth.py  (+2 more)
webcall/app/bootstrap/: asgi.py  main.py
webcall/app/core/: errors.py
webcall/app/infrastructure/: config.py  logging.py
webcall/app/presentation/: docs.py  errors.py
webcall/app/scripts/: create_superuser.py  wait_for_db.py
webcall/app/tests/: conftest.py  test_auth.py  test_direct_crypto.py  test_friends_push.py  test_profile.py  test_registration_secret.py  test_rooms.py  test_ws_basic.py
webcall/app/tests_e2e/: test_signaling_smoke.py
webcall/docker/: api.Dockerfile  api.prod.Dockerfile  turnserver.conf
webcall/monitoring/: prometheus.yml
webcall/scripts/: alembic_diag.py
webcall/scripts/legacy/: README_legacy.txt  dump.bat
webcall/tests/: conftest.py  test_ai_prompt.py  test_health.py  test_summary.py  test_summary_participants.py  test_summary_threshold.py
(+136 files in other folders)
